src/test/compile-fail/ext-nonexistent.rs
// error-pattern:macro undefined
fn main() { #iamnotanextensionthatexists(""); }